--- a/index.html
+++ b/index.html
@@ -129,10 +129,13 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#section3">Internship 3</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section4">Internship 4</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>                  
-                <div id="section1" class="container-fluid bg-success text-white" style="padding:100px 20px;">
+                <div id="section1" class="container-fluid bg-success text-white" style="padding:50px 20px;">
                     <h1 class="role">JAVA DEVELOPER</h1>
                     <h3>CODETECH IT SOLUTIONS</h3>
                     <ul>
@@ -141,7 +144,7 @@
                     </ul>
                 </div>
                   
-                <div id="section2" class="container-fluid bg-warning" style="padding:100px 20px;">
+                <div id="section2" class="container-fluid bg-warning" style="padding:50px 20px;">
                     <h1 class="role">WEB DEVELOPER</h1>
                     <h3>BHARAT INTERN</h3>
                     <ul>
@@ -150,13 +153,22 @@
                     </ul>                    
                 </div>
                   
-                <div id="section3" class="container-fluid bg-secondary text-white" style="padding:100px 20px;">                    
+                <div id="section3" class="container-fluid bg-secondary text-white" style="padding:50px 20px;">                    
                     <h1 class="role">JAVA DEVELOPER</h1>
                     <h3>OASIS INFOBYTE</h3>
                     <ul>
                         <li>Duration : 1-1-2024 to 31-1-2024</li>
                         <li>It's a 1-month virtual internship</li>
                     </ul>
+                </div>
+
+                <div id="section4" class="container-fluid bg-info" style="padding:50px 20px;">
+                    <h1 class="role">WEB DEVELOPER</h1>
+                    <h3>CODETECH IT SOLUTIONS</h3>
+                    <ul>
+                        <li>Duration : 20-1-2024 to 20-2-2024</li>
+                        <li>It's a 1-month virtual internship</li>
+                    </ul>                    
                 </div>
             </div>
         </div>
