--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#footer">SOCIAL-MEDIA</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#contact">CONTACT</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -233,7 +233,7 @@
                     <li><a href="https://github.com/SaiNithishReddy/Amazon_clone-Project"> AMAZON -CLONE APP </a></li>
                     <li><a href="https://github.com/SaiNithishReddy/Alarm_Clock_JS"> ALARM CLOCK APP </a></li>
                     <li><a href="https://github.com/SaiNithishReddy/Meal_App_JS"> MEAL APP </a></li>
-                    <li><a href="https://github.com/SaiNithishReddy/Rock-Paper-Scissors-Game"> Rock Paper Scissor Game </a></li>
+                    <li><a href="https://github.com/SaiNithishReddy/CODETECH-IT-SOLUTIONS-WEB/tree/main/TASK%205"> To-Do List Application </a></li>
                     <li><a href="https://github.com/SaiNithishReddy/BHARAT-INTERN/tree/main/TASK%202%20-%20WEATHER"> WEATHER APPLICATION </a></li>
                 </ul>
             </div>
@@ -312,7 +312,7 @@
     <!-- FOOTER SECTION ENDS HERE -->
 
     <!-- CONTACT START HERE -->
-    <section id="contact" class="container">
+    <!-- <section id="contact" class="container">
         <h2>REACH ME OUT</h2>
         <div class="row">
             <div class="col-4">
@@ -336,7 +336,7 @@
                 </form>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- CONTACT ENDS HERE -->
 
     <div class="container-fluid bg-success">
