--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#footer">SOCIAL-MEDIA</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#contact">CONTACT</a>
-                    </li> -->
                 </ul>
             </div>
         </div>
@@ -58,9 +55,9 @@
         sainithishr@gmail.com
         Contact: +91 8885920520
         Hyderabad,Telangana</pre></strong>
-                    <div>And I'm a <span class="typing"></span></div>
-                    <div>I have internship experience on <span class="typing-1"></span></div>
-                    <a href="https://drive.google.com/file/d/14uM1r2IjJ972ljcghtEmgbcEhux-cITg/view?usp=drivesdk">
+                    <div>And I'm wanted to be an aspiring <span class="typing"></span></div>
+                    <div>I have internship experience in <span class="typing-1"></span></div>
+                    <a href="https://drive.google.com/file/d/1jMYNZMa4V3kuT12Xm5gUJ41QFdQ4nAeu/view?usp=sharing">
                         <button type="button" class="btn btn-success">DOWNLOAD CV</button>
                     </a>
                 </div>
@@ -98,6 +95,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JAVASCRIPT</li>
+                    <li>REACT</li>
                 </ul>
             </div>
             <div class="col-4">
@@ -106,6 +104,7 @@
                     <li>SPRING BOOT</li>
                     <li>BOOTSTRAP</li>
                     <li>ANGULAR</li>
+                    <li>GIT</li>
                 </ul>
             </div>
         </div>
@@ -132,11 +131,14 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#section4">Internship 4</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section5">Internship 5</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>                  
                 <div id="section1" class="container-fluid bg-success text-white" style="padding:50px 20px;">
-                    <h1 class="role">JAVA DEVELOPER</h1>
+                    <h1 class="role">JAVA DEVELOPMENT</h1>
                     <h3>CODETECH IT SOLUTIONS</h3>
                     <ul>
                         <li>Duration : 15-1-2024 to 15-2-2024</li>
@@ -145,7 +147,7 @@
                 </div>
                   
                 <div id="section2" class="container-fluid bg-warning" style="padding:50px 20px;">
-                    <h1 class="role">WEB DEVELOPER</h1>
+                    <h1 class="role">WEB DEVELOPMENT</h1>
                     <h3>BHARAT INTERN</h3>
                     <ul>
                         <li>Duration : 10-1-2024 to 10-2-2024</li>
@@ -154,7 +156,7 @@
                 </div>
                   
                 <div id="section3" class="container-fluid bg-secondary text-white" style="padding:50px 20px;">                    
-                    <h1 class="role">JAVA DEVELOPER</h1>
+                    <h1 class="role">JAVA DEVELOPMENT</h1>
                     <h3>OASIS INFOBYTE</h3>
                     <ul>
                         <li>Duration : 1-1-2024 to 31-1-2024</li>
@@ -162,13 +164,22 @@
                     </ul>
                 </div>
 
-                <div id="section4" class="container-fluid bg-info" style="padding:50px 20px;">
-                    <h1 class="role">WEB DEVELOPER</h1>
+                <div id="section4" class="container-fluid bg-success text-white" style="padding:50px 20px;">
+                    <h1 class="role">WEB DEVELOPMENT</h1>
                     <h3>CODETECH IT SOLUTIONS</h3>
                     <ul>
                         <li>Duration : 20-1-2024 to 20-2-2024</li>
                         <li>It's a 1-month virtual internship</li>
                     </ul>                    
+                </div>
+
+                <div id="section5" class="container-fluid bg-info" style="padding:50px 20px;">
+                    <h1 class="role">JAVA DEVELOPMENT</h1>
+                    <h3>COGNIFYZ TECHNOLOGIES</h3>
+                    <ul>
+                        <li>Duration : 1-2-2024 to 29-2-2024</li>
+                        <li>It's a 1-month virtual internship</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -310,34 +321,6 @@
         </div>
     </footer>
     <!-- FOOTER SECTION ENDS HERE -->
-
-    <!-- CONTACT START HERE -->
-    <!-- <section id="contact" class="container">
-        <h2>REACH ME OUT</h2>
-        <div class="row">
-            <div class="col-4">
-                <img class="mypic" src="PHOTOS/pic.JPG" alt="PIC">
-            </div>
-            <div class="col-8">
-                <form id="contactForm" action="sendmail.php" method="post">
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="sub">Subject:</label>
-                        <input type="text" class="form-control" id="sub" placeholder="Enter Subject" name="subject">
-                    </div>
-                    <div class="form-group">
-                        <label for="msg">Message:</label>
-                        <textarea class="form-control" id="msg" placeholder="Enter Message" name="message" rows="4"></textarea>
-                    </div>
-                    <button type="button" id="submitBtn" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-    </section> -->
-    <!-- CONTACT ENDS HERE -->
 
     <div class="container-fluid bg-success">
         <strong> Made by @Sai Nithish Reddy Lakdaram</strong>
